# brickroot

./: .gitignore  default many enzymes.txt  default.fa  default.txt  default_with_edits.gb  forbidden.txt  junk.py  lastusedfasta.txt  licensing.txt  prefs.config  pyproject.toml  readmeFirst.txt  silicaBrickCandidateCTerm.fa  silicaBrickCandidateCTerm_with_edits.gb  silicaBrickCandidateNTerm.fa  silicaBrickCandidateNTerm_with_edits.gb  silicaBrickCandidate_with_edits.gb  start.py  test.py  third party libs.txt
biobrick.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
brickmodule/: Controller.py  MainUI.py  Model.py  OptimizeDialog.py  process.py  util.py
brickpackage/: Controller.py  DomesticateDialog.py  MainUI.py  Model.py  OptimizeDialog.py  UtilFileIO.py  process.py  util.py
tests/: short.fa
